[tool.poetry]
name = "pdu"
version = "1.0.0"
description = ""
authors = ["Grégory Duchatelet <greg@easyflirt.com>"]
packages = [
    { include = "pdu.py" }
]

[tool.poetry.scripts]
pdu = "pdu:main"

[tool.poetry.dependencies]
python = "^3.11"
pysnmp = "^4.4.12"
nicelog = "^0.3"
configparser = "^6.0.0"
termcolor = "^2.3.0"
pyasn1 = "0.4.8"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"

